--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
-
+/* #region main */
 body {
     margin: 0px;
     overflow-x: hidden;
@@ -16,6 +16,17 @@ body {
 .text-lead {
     font-size: 1.5em;
 }
+.main {
+    background-color: rgb(54, 52, 52);
+    min-height: 100vh;
+    max-width: 1300px;
+    margin: auto;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 0px;
+}
+/* #endregion */
+/* #region header */
 .headerdiv {
     background-color: #395462;
     margin-left: -10px = 0px;
@@ -83,17 +94,8 @@ body {
 .navbar .container-fluid {
     padding: 0;
 }
-
-.main {
-    background-color: rgb(54, 52, 52);
-    min-height: fill;
-    max-width: 1300px;
-    margin: auto;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-top: 0px;
-}
-
+/* #endregion */
+/* #region about */
 .about-header {
     width: inherit;
     background-color: #701217;
@@ -166,7 +168,41 @@ body {
     color:#b43b41;
     text-shadow: 0px 0px 10px#0f1617;
 }
-
+/* #endregion */
+/* #region error */
+.errormain {
+    color: white;
+    padding: 40px;
+}
+.errormain img {
+    flex: 50%;
+}
+/* #endregion */
+/* #region info */
+.infomain {
+    padding: 10px;
+}
+.infomain .btn {
+    background-color: #701217;
+    color: white;
+}
+/* #endregion */
+/* #region footer */
+footer {
+    background-color: #49768d;
+    color: white;
+}
+footer p {
+    margin:0;
+    margin-left: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+footer .bar {
+    background-color: #395462;
+}
+/* #endregion */
+/* #region media queries */
 @media screen and (max-width: 800px) {
     .about-header h1 {
         padding: 14px;
@@ -185,3 +221,4 @@ body {
         visibility: hidden;
     }
 }
+/* #endregion */
