--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,9 @@ body {
     margin: 0px;
     overflow-x: hidden;
     font-family: 'Josefin Sans';
-    background-color: #0f1617;
-    background-image: url(./img/mother.png);
-    background-size: 22vw;
+    background-color: #1B1811;
+    /*background-image: url(./img/webpage.png);*/
+    background-size: 50vw;
 }
 .bar {
     width: inherit;
@@ -20,14 +20,14 @@ body {
     font-size: 1.5em;
 }
 .main {
-    background-color: rgb(54, 52, 52);
-    min-height: calc(100vh - 178px);
+    background-color: rgba(0, 0, 0, 0.6);
+    min-height: calc(100vh - 170px);
     max-width: 1300px;
     margin: auto;
     padding-left: 5px;
     padding-right: 5px;
     padding-top: 0px;
-    box-shadow: 0px 0px 20px #210103; 
+    box-shadow: 0px 0px 200px #000000; 
 }
 .p-space {
     padding-top: 7px;
@@ -35,7 +35,7 @@ body {
 /* #endregion */
 /* #region header */
 .headerdiv {
-    background-color: #395462;
+    background-color: #3C1321;
     margin-left: -10px = 0px;
     height: 100px;
     background-size: cover;
@@ -45,18 +45,18 @@ body {
 }
 .headerdiv a {
     margin: 0;
-    color: #c7ece6;
-    font-size: 36px;
+    color: #C23838;
+    font-size: 46px;
     font-weight: 700;
     z-index: 1000;
     position: absolute;
-    top: 50px;
+    top: 40px;
     left: 10px;
     white-space: nowrap;
 }
 .headerdiv a:hover {
     text-underline-offset: -1000px;
-    color:#e5f4f1;
+    color:#d13f3f;
 }
 .fallingtextdiv {
     width: 100%;
@@ -67,34 +67,36 @@ body {
 .fallingtextdiv p {
     margin: 0px;
     position: sticky;
-    color: #7da1b1;
+    color: #b03030;
+    text-shadow: 0 0 7px #340f0f;
 }
 .navbar {
-    padding:0;
+    padding: 0;
 }
 .navbar a {
-    color: #c7ece6;
-    background-color: #7da1b1;
+    color: #3C1321;
+    font-weight: 700;
+    background-color: #C23838;
     padding: 7px;
 }
 .navbar .alt-nav {
-    background-color: #7598a7;
+    background-color: #af2a2a;
 }
 .navbar a:hover {
-    color: white;
+    color: #1f0a11;
     text-decoration-line: none;
-    background-color: #49768d;
+    background-color: #9d2929;
 }
 .navbar-toggler {
     position: absolute;
     z-index: 10000;
     top: -47px;
-    right:10px;
+    right: 10px;
     width: 50px;
     height: 34px;
     background-image: url(./img/button.png);
     border: none;
-    background-color: #395462;
+    background-color: #3C1321;
     visibility: hidden;
 }
 .navbar-toggler:hover {
@@ -113,22 +115,6 @@ body {
     .homebar {
         background-color:#580e12;
     }
-    #home-carousel {
-        max-height: 400px;
-        background-color: #0d0001;
-        margin-left: -5px;
-        margin-right: -5px;
-    }
-    #home-carousel img {
-        max-height: 400px;
-        max-width: 100vw;
-        line-height: 30px;
-        margin: auto;
-    }
-    #home-carousel .carousel-control-prev,
-    #home-carousel .carousel-control-next {
-        background-color:#210204;
-    }
     .home-main {
         background-color: black;
         font-family: 'Source Code Pro', monospace;
@@ -141,9 +127,6 @@ body {
         padding-top: 20px;
         padding-left: 10px;
         padding-right: 10px;
-    }
-    .home-main h1::after {
-        content: "_";
     }
 /* #endregion */
 /* #region about */
@@ -272,8 +255,9 @@ body {
 /* #endregion */
 /* #region footer */
 footer {
-    background-color: #49768d;
-    color: white;
+    background-color: #C23838;
+    color: #1f0a11;
+    font-weight: 700;
 }
 footer p {
     margin:0;
@@ -282,7 +266,7 @@ footer p {
     padding-bottom: 5px;
 }
 footer .bar {
-    background-color: #395462;
+    background-color: #af2a2a;
 }
 /* #endregion */
 /* #region media queries */
