--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 /* #region main */
 body {
     margin: 0px;
@@ -22,7 +21,8 @@ body {
 }
 .main {
     background-color: rgba(0, 0, 0, 0.6);
-    min-height: calc(100vh - 170px);
+    min-height: calc(100vh - 178px);
+
     max-width: 1400px;
     margin: auto;
     padding-left: 5px;
@@ -55,6 +55,11 @@ body {
     left: 10px;
     white-space: nowrap;
 }
+.headerdiv em {
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 100;
+}
 .headerdiv a:hover {
     text-underline-offset: -1000px;
     color:#d13f3f;
@@ -79,6 +84,7 @@ body {
     font-weight: 700;
     background-color: #C23838;
     padding: 7px;
+    transition: ease .3s;
 }
 .navbar .alt-nav {
     background-color: #af2a2a;
@@ -113,22 +119,48 @@ body {
 }
 /* #endregion */
 /* #region home */
-    .homebar {
-        background-color:#580e12;
-    }
-    .home-main {
-        background-color: black;
-        font-family: 'Source Code Pro', monospace;
-        margin-left: -5px;
-        margin-right: -5px;
-        margin-bottom: -8px;
-    }
-    .home-main h1 {
-        color: white;  
-        padding-top: 20px;
-        padding-left: 10px;
-        padding-right: 10px;
-    }
+.home-main {
+    color: white;
+    height: inherit;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.home-desc {
+    padding-top: 20px;
+    color: white;
+    text-align: center;
+}
+.home-desc a { 
+    color:#C23838;
+    transition: ease .1s;
+}
+.home-desc a:hover {
+    text-decoration: none;
+    color: #d44242;
+} 
+.home-desc strong {
+    color: #5E0009;
+    text-shadow: #260404 0 0 5px;
+}
+.home-main .content {
+    display: flex;
+    margin-top: 20px;
+}
+.home-main h1 {
+    font-weight: 700;
+    position: absolute;
+    text-shadow: 0 0 25px black;
+    transform: translate(215px,75px);
+}
+.home-main h1::after {
+    content: '_';
+}
+.home-main img {
+    border: solid rgb(31, 33, 70) 5px;
+    border-radius: 50%;
+    height: 300px;
+}
 /* #endregion */
 /* #region about */
 .about-header {
@@ -165,9 +197,11 @@ body {
     padding-left: 5%;
     padding-right: 5%;
     margin-right: 5px;
+    transition: ease .2s;
 }
 .link-logo:hover {
     background-color: rgb(28, 31, 98);
+    transform: scale(1.1,1.1);
 }
 .link-logo:active {
     background-color: rgb(32, 36, 113);
@@ -195,7 +229,7 @@ body {
 .about-main p {
     padding: 20px;
     padding-top: 10px;
-    background-color:rgba(23, 26, 79, 0.532);
+    background-color:rgba(23, 26, 79, 0.822);
     color: white;
     box-shadow: 0px 0px 10px #0f1617;
     border-radius: 20px;
@@ -234,23 +268,32 @@ body {
 }
 /* #endregion */
 /* #region info */
-
 .infomain {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 .infomain a {
-    margin-top: 5px;
-    flex: 100%;
-    font-size: 20px;
     color: white;
     background-color: #580e12;
     border:#701217 solid 3px;
     border-radius: 10px;
-}
-.infomain .document {
+    font-size: 20px;
     margin: auto;
-    padding-top: 10px;
+    margin-top: 5px;
+    transition: ease .2s;
+}
+.infomain a:hover {
+    transform: scale(1.1,1.1);
+}
+.document {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    margin-bottom: 5px;
 }
 
 
@@ -273,6 +316,25 @@ footer .bar {
 }
 /* #endregion */
 /* #region media queries */
+@media screen and (max-width: 1200px) {
+    .about-main p {
+        font-size: 12pt;
+        padding-left: 300px;
+        padding-right: 300px;
+        margin-left: -300px;
+        margin-right: -300px;
+        margin-top: -40px;
+    }
+    .about-main .col-sm-12:first-child {
+        height: fit-content;
+        display: flex;
+        justify-content: center;
+    }
+    .about-main img {
+        max-width: 400px;
+        
+    }
+}
 @media screen and (max-width: 800px) {
     .about-header h1 {
         padding: 14px;
@@ -293,18 +355,26 @@ footer .bar {
     .navbar-toggler {
         visibility: visible;
     }
-    .about-main p {
-        font-size: 11.25pt;
-        padding-left: 300px;
-        padding-right: 300px;
-        margin-left: -300px;
-        margin-right: -300px;
+    .home-main img {
+        margin-top: 50px;
+    }
+    .home-main h1 {
+        transform: translate(45px,0);
+    }
+    .about-main .col-sm-12:first-child {
+        height: initial;
+        display: initial;
     }
     .about-main img {
-        width: 100vw;
+        position: relative;
+        max-width: 100vw;
         margin: -20px;
-        margin-left: -40px;
+        margin-left: -20px;
         border-radius: 0;;
+    }
+    .about-main p {
+        margin-top: 0;
+        font-size: 11.25pt;
     }
 }
 /* #endregion */
