--- a/src/index.css
+++ b/src/index.css
@@ -163,6 +163,76 @@ body {
     box-shadow: rgb(31, 33, 70) 0 0 10px;
 }
 /* #endregion */
+/* #region projects */ 
+    .projects-main {
+        color: white;
+        padding: 10px;
+    }
+    .projects-main h1 {
+        text-align: center;
+    }
+    .projects-main .year-section {
+        background-color: rgba(0, 0, 0, 0.212);
+        padding: 10px;
+        margin-left: -10px;
+        margin-right: -10px;
+        margin-bottom: 10px;
+    }
+    .project-section {
+        background-color: rgba(0, 0, 0, 0.212);
+        display: flex;
+        flex-wrap: wrap;
+        padding-left: 10px;
+        padding-right: 10px;
+        margin-left: -10px;
+        margin-right: -10px;
+        margin-bottom: 10px;
+    }
+    .project-section img {
+        background-color: rgba(25, 17, 49, 0.212);
+        
+        padding-top: 10px;
+        padding-bottom: 10px;
+
+        max-height: 350px;
+        max-width: calc(100vw - 20px);
+
+        flex: 100%;
+        object-fit: scale-down;
+        justify-self: center;
+
+        box-shadow: inset 0 0 100px rgba(25, 17, 49, 0.212);
+
+        padding-left: 10px;
+        padding-right: 10px;
+        margin-left: -10px;
+        margin-right: -10px;
+    }
+    .project-section h5 {
+        flex: 100%;
+        font-size: 30px;
+        padding-top: 15px;
+    }
+    .project-section h4 {
+        color:rgb(46, 51, 146);
+        text-indent: 10px;
+        font-style: italic;
+    }
+    .project-title-link {
+        color: white;
+    }
+    .project-title-link:hover {
+        color: gray;
+        text-decoration: none;
+    }
+    .desc {
+        text-indent: 20px;
+        flex: 100%;
+    }
+    .repo-link {
+        text-indent: 0px;
+    }
+/* #endregion */
 /* #region about */
 .about-header {
     width: inherit;
