--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,7 @@ body {
     width: inherit;
     background-color: black;
     padding: 3px;
-    margin-left: -5px;
-    margin-right: -5px;
+    overflow: hidden;
 }
 .text-lead {
     font-size: 1.5em;
@@ -69,12 +68,14 @@ body {
     height: inherit;
     top: 0px;
     position: absolute;
+    overflow: hidden;
 }
 .fallingtextdiv p {
     margin: 0px;
     position: sticky;
     color: #b03030;
     text-shadow: 0 0 7px #340f0f;
+    overflow: hidden;
 }
 .navbar {
     padding: 0;
@@ -264,14 +265,15 @@ body {
     flex: 40%;
     float: right;
     margin-right: 0px;
+    overflow: hidden;
 }
 .link-logo {
     float: right;
     flex: 10%;
     background-color: rgb(23, 26, 81);
     padding: 0;
-    padding-left: 5%;
-    padding-right: 5%;
+    padding-left: 3%;
+    padding-right: 3%;
     margin-right: 5px;
     transition: ease .2s;
 }
@@ -359,7 +361,7 @@ body {
     border-radius: 10px;
     font-size: 20px;
     margin: auto;
-    margin-top: 5px;
+    margin-top: 15px;
     transition: ease .2s;
 }
 .infomain a:hover {
@@ -370,6 +372,8 @@ body {
     justify-content: center;
     margin-top: 10px;
     margin-bottom: 5px;
+    transform: scale(100vw);
+    overflow: hidden;
 }
 
 
@@ -393,11 +397,12 @@ footer .bar {
 @media screen and (max-width: 1200px) {
     .about-main p {
         font-size: 12pt;
-        padding-left: 300px;
-        padding-right: 300px;
-        margin-left: -300px;
-        margin-right: -300px;
+        padding-left: 40px;
+        padding-right: 40px;
+        margin-left: -40px;
+        margin-right: -40px;
         margin-top: -40px;
+        border-radius: 0%;
     }
     .about-main .col-sm-12:first-child {
         height: fit-content;
@@ -449,6 +454,17 @@ footer .bar {
     .about-main p {
         margin-top: 0;
         font-size: 11.25pt;
+    }
+}
+@media screen and (max-width: 620px) {
+    .document {
+        visibility: hidden;
+        height: 0px;
+    }
+    .infomain a {
+        height: 100px;
+        line-height: 85px;
+        margin-top: 25vh;
     }
 }
 /* #endregion */
